@@ -1,3 +1,9 @@
+2008-03-25  Philip Withnall  <pwithnall@svn.gnome.org>
+
+	* src/totem.c: (main): Patch from Krzysztof Kotlenga
+	<piernik@gmail.com> to fix a crash on an unrecognised command line.
+	(Closes: #522070)
+
 2008-03-17  Vincent Untz  <vuntz@gnome.org>
 
 	* data/desktop.sh: end the outputted line with \n
